styles/header.css
#primary {
  padding-block: 20px;
}

#primary div {
  display: flex;
  align-items: center;
  gap: 8px;
}

#primary div:nth-child(2) {
  margin-inline: auto;
}

#primary div:nth-child(3) {
  justify-self: end;
}

#secundary {
  padding-block: 14px;
  border: solid 1px var(--stroke-color);
  border-inline: none;
}

